#add_definitions(${QT_DEFINITIONS})
add_definitions(-DQT_PLUGIN)
add_definitions(-DQT_SHARED)

SET(LIBRARY_OUTPUT_PATH ${PLUGIN_OUTPUT_PATH})

add_subdirectory(brush3d)
add_subdirectory(brush2d)
add_subdirectory(lasso3d)
add_subdirectory(lasso2d)
add_subdirectory(graphcut)
add_subdirectory(normalestimation)
add_subdirectory(visualisenormals)
#add_subdirectory(stub)
add_subdirectory(flood)
add_subdirectory(visualisedepth)
